<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:background="@drawable/background"
    tools:context="com.example.nitishkumar.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/headText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_cricket_scoreboard"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/dull_orange"
            android:textSize="@dimen/_30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_15dp"
            android:layout_below="@id/headText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/select_team_1_text"
                android:layout_margin="@dimen/_10dp"
                android:textColor="@color/green_color"
                android:textSize="@dimen/_20sp"/>

            <Spinner
                android:id="@+id/team1"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_10dp"
                android:background="@color/green_color"
                android:popupBackground="@color/green_color"
                android:alpha="0.75"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v_s"
                android:textSize="@dimen/_25sp"
                android:textStyle="bold"
                android:textColor="@color/green_color"
                android:layout_margin="@dimen/_10dp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/select_team_2_text"
                android:layout_margin="@dimen/_10dp"
                android:textColor="@color/green_color"
                android:textSize="@dimen/_20sp"/>

            <Spinner
                android:id="@+id/team2"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_10dp"
                android:background="@color/green_color"
                android:popupBackground="@color/green_color"
                android:alpha="0.75"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/green_color"
                android:textStyle="bold"
                android:text="@string/select_no_of_overs_text"
                android:layout_margin="@dimen/_10dp"
                android:textSize="@dimen/_20sp"/>

            <Spinner
                android:id="@+id/over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_color"
                android:popupBackground="@color/green_color"
                android:alpha="0.75"
                android:layout_margin="@dimen/_10dp"></Spinner>

            <Button
                android:id="@+id/startGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_game_text"
                android:background="@color/dull_orange"
                android:padding="@dimen/_10dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_20dp"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
